rke2/kubernetes/core/cilium/inbound-clients.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-nats-clients"
  namespace: nats-a
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: nats-a
  ingress:
    - fromCIDR:
        - 192.168.1.0/24
    - toPorts:
        - ports:
            - port: '4222'
              protocol: TCP
